<resources>
    <string name="app_name">Moon HM</string>
    <string name="company_name">Moon HM</string>
    <string name="title_activity_analyze_chart">Analyze Chart</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About App</string>

    <string name="about_copyright">Copyright © 2015 by Guo Jun</string>
    <string name="about_title">Glad to join the intership of WorkApp</string>
    <string name="about_text">Welcome to guide. Thank you.\nBy GuoJun\n2015.12.11</string>

    <string name="room_type_blank">Empty\n%1$d</string>
    <string name="room_type_dirty">Dirty\n%1$d</string>
    <string name="room_type_in_use">Living\n%1$d</string>
    <string name="room_type_repair">Repairing\n%1$d（间）</string>
    <string name="room_type_in_use_dirty">BLocking\n%1$d（间）</string>
    <string name="room_type_total">Total\n%1$d</string>
    <string name="room_string_model">%1$d</string>

    <string name="form_current">Current</string>
    <string name="form_history">History</string>
    <string name="form_type">Type</string>
    <string name="form_yesterday_value">Yesterday</string>
    <string name="form_month_value">Monthly</string>

    <string name="guest_state_in">Today check in</string>
    <string name="guest_state_left_today">Today check out</string>
    <string name="guest_state_left_yesterday">Yesterday check out</string>
    <string name="guest_state_in_summary_textView">Now living number：%1$d  Total sales：%2$d Yuan</string>
    <string name="guest_state_room_id">Room</string>
    <string name="guest_state_name">Name</string>
    <string name="guest_state_income">Income</string>
    <string name="guest_state_time_span">Span</string>
</resources>
