<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="8dp"
    tools:context="com.gj.administrator.gjerp.fragment.GuestFragment">


    <RadioGroup
        android:id="@+id/room_style_group"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/guest_state_in_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/guest_state_in"
            android:textSize="12sp" />


        <RadioButton
            android:id="@+id/guest_state_left_today_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/guest_state_left_today"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/guest_state_left_yesterday_radioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/guest_state_left_yesterday"
            android:textSize="12sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/guest_state_in_summary"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/guest_state_in_summary_textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical|start"
            android:text="@string/guest_state_room_id" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical|end"
            android:text="@string/guest_state_name"/>

        <TextView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical|end"
            android:text="@string/guest_state_income"/>

        <TextView
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical|end"
            android:text="@string/guest_state_time_span"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/guest_state_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" />

</LinearLayout>
